--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -1,7 +1,6 @@
 %!TEX root = ../thesis.tex
 
-\section{Introduction}
-\label{sec:introduction}
+\chapter{Introduction}
 
 This thesis is in the realm of formal verification, i.e. the attempt to verify a system by the use of formal methods such as SAT solvers, interactive theorem provers and model checkers.
 With these tools, formal verification engineers strive to prove the correctness of systems such as general computer programs, \glspl{os}, compilers or hardware designs.
@@ -61,19 +60,19 @@ In his work, \citeauthor{Reid17} focused on higher lever properties to verify th
 nuXmv on the other hand allows to consider infinite sequences of instructions, i.e. sequences of processor-transitions, of unbounded length.
 
 This thesis is structured as follows:
-In section \ref{sec:background}, the background of this thesis will be introduced.
+In chapter \ref{chp:background}, the background of this thesis will be introduced.
 This includes both key papers of \citeauthor{Reid17} and \citeauthor{Ferraiuolo17} as well as \glspl{isa} and model checkers.
 An introduction to \gls{risc} architectures and their ecosystem will be discussed concluding with a threat model for this thesis.
 After this, model checkers will be explained.
 At the end of this section, the methodology of this thesis will be discussed in more detail.
 
-In section \ref{sec:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be introduced.
+In chapter \ref{chp:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be introduced.
 Following up on this, it will be described how the MINRV8 architecture was implemented in nuXmv.
 
-Section \ref{sec:ifc} details what information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher level properties that implement information flow control for the MINRV8 architecture.
+Chapter \ref{chp:ifc} details what information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher level properties that implement information flow control for the MINRV8 architecture.
 
-The evaluation of our approach is given in section \ref{sec:results}-\ref{sec:conclusion}.
-First, the results of the verification process will be presented in section \ref{sec:results}.
-These results will then be discussed in section \ref{sec:discussion}.
-In section \ref{sec:related-work} the results and the approach in general will be compared to related work and in section \ref{sec:conclusion}, a final conclusion will be given.
+The evaluation of our approach is given in chapter \ref{chp:results}-\ref{chp:conclusion}.
+First, the results of the verification process will be presented in chapter \ref{chp:results}.
+These results will then be discussed in chapter \ref{chp:discussion}.
+In chapter \ref{chp:related-work} the results and the approach in general will be compared to related work and in chapter \ref{chp:conclusion}, a final conclusion will be given.
 
